many change institute

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,12 @@
     <string-array name="treatment_type">
         <item>CT</item>
         <item>MRI</item>
-        <item>מיפוי עצמות</item>
+        <item>BONE MAPPING</item>
 
     </string-array>
+
+    <string name="col1">שם מלא</string>
+    <string name="col2">תעודת זהות</string>
+    <string name="col3">שעה</string>
 
 </resources>
