--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,18 @@
     <string name="LOGIN">LOGIN</string>
 
     <string-array name="treatment_type">
+        <item> choose</item>
         <item>CT</item>
         <item>MRI</item>
-        <item>BONE MAPPING</item>
+        <item>BONE-MAPPING</item>
 
     </string-array>
 
     <string-array name="city__array">
-        <item> </item>
+        <item> choose</item>
         <item>Ramat-Gan</item>
         <item>Tel-Aviv</item>
+        <item>Heifa</item>
     </string-array>
 
     <string name="col1">שם מלא</string>
